# dotfiles

./: .gitignore  README.md  desktop.package
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml  desktop.yml  laptop.yml
alacritty/.config/alacritty/themes/: kanagawa.toml  modus-vivendi.toml  one_dark.toml
autorandr/.config/autorandr/: postswitch
autorandr/.config/autorandr/default/: config  setup
dwm/.dwm/: autostart.sh  config.h
emacs/: init.el
fish/.config/fish/: config.fish  fish_plugins
glow/.config/glow/: glow.yml
hyprland/.config/hypr/: hypridle.conf  hyprlan.conf.bak  hyprland.conf  hyprlock.conf  hyprpaper.conf
hyprland/.config/hypr/scripts/: auto-switch-layout
i3/.config/i3/: config  desktop  laptop
i3/.config/i3/scripts/: i3-balance  (+1 more)
kitty/.config/kitty/: README.md  kitty.conf  theme.conf
lazygit/.config/lazygit/: config.yml
nvim/.config/nvim/: init.lua
picom/.config/picom/: desktop.conf  laptop.conf  picom.conf
polybar/.config/polybar/: config
scripts/Scripts/: killwine
spotify-tui/.config/spotify-tui/: config.yml
spotifyd/.config/spotifyd/: spotifyd.conf
tmux/: .tmux.conf
tridactyl/.config/tridactyl/: tridactylrc
wezterm/.config/wezterm/: wezterm.lua
xmonad/: .xmobarrc
xmonad/.xmonad/: .gitignore  README.md  autostart  build  hie.yaml  my-xmonad.cabal  stack.yaml
xmonad/.xmonad/lib/: xmonad.hs
zsh/: .p10k.zsh  .starship.toml  .zimrc  .zsh  .zsh.plugin  .zshrc
zsh/.zsh/: alias.zsh  compmenu.zsh  history.zsh  plugins.zsh  prompt.zsh  zinit.zsh
zsh/.zsh/assets/: vividtheme.old.yml  vividtheme.yml
(+58 files in other folders)
