name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../lib/xmonad.hs
  other-modules:
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
  hs-source-dirs:      lib
  default-language:    Haskell2010
  -- ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
  ghc-options:         -Werror -fno-warn-missing-signatures -threaded -j9
